update : fix ui and create componnet for Inner Component
